<resources>
    <string name="app_name">Bergants</string>
    <string name="vinc">Vinc</string>
    <string name="noVinc">No vinc</string>
    <string name="nomAssaig">ASSAIG ESPECIAL DE LA MERCÈ</string>
    <string name="dataAssaig">DIVENDRES 23 de Setembre del 2022</string>
    <string name="horaAssaig">20:00h</string>
    <string name="ubicacioAssaig">Pl. Campus</string>
    <string name="nomActuacio">ACTUACIÓ EMBOIRATS, VIC </string>
    <string name="dataActuacio">DIJOUS 24 de Novembre del 2022</string>
    <string name="horaActuacio">16:00h</string>
    <string name="ubicacioActuacio">Universitat de Vic</string>
    <string name="autocar">0 Places</string>
    <string name="cotxe">Cotxes</string>
    <string name="temaAssaig">TEMA DE L\'ASSAIG</string>
    <string name="inputTemaAssaig">Assaig Bergant</string>
    <string name="administrador">ADMINISTRADOR</string>
    <string name="espatlles">ALÇADA ESPATLLES</string>
    <string name="inputalçada">cm</string>
    <string name="mans">ALÇADA MANS</string>
    <string name="correu">CORREU ELECTRÒNIC</string>
    <string name="inputcorreu">\@gmail.com</string>
    <string name="adreca">ADREÇA</string>
    <string name="inputadreca">C/</string>
    <string name="numerotel">NUMERO DE TELEFON</string>
    <string name="rol">ROL</string>
    <string name="inputTelefon">666 666 666</string>
    <string name="inputrol">membre</string>
    <string name="botoafegir">Afegir</string>
    <string name="desplegableHora">desplegableHora</string>
    <string name="HoraTitol">HORA</string>
    <string name="HoraSpinner">Hora</string>
    <string name="MinutSpinner">Minut</string>
    <string name="DataTitol">DATA</string>
    <string name="DiaSpinner">Dia</string>
    <string name="desplegableMinut">desplegableMinut</string>
    <string name="desplegableDia">desplegableDia</string>
    <string name="MesSpinner">Mes</string>
    <string name="desplegableMes">desplegableMes</string>
    <string name="AnySpinner">Any</string>
    <string name="desplegableAny">desplegableAny</string>
    <string name="UbicacioTitol">UBICACIÓ</string>
    <string name="inputUbicacio">Ubicació</string>
    <string name="temaActuacio">TEMA DE L\'ACTUACIÓ</string>
    <string name="inputTemaActuacio">Actuació Bergant</string>
    <string name="AutocarTitol">AUTOCAR</string>
    <string name="PlacesAutocar">Places</string>
    <string name="desplegablePlacesAutocar">desplegablePlacesAutocar</string>
    <string name="HoraSpinnerAutocar">Hora</string>
    <string name="HoraTitolAutocar">HORA</string>
    <string name="desplegableHoraAutocar">DesplegableHoraAutocar</string>
    <string name="desplegableMinutAutocar">desplegableMinutAutocar</string>
    <string name="forgottenPassword">Has oblidat la contrasenya?</string>
    <string name="logIn">Iniciar sessió</string>
    <string name="keepLoggedIn">Mantenir sessió iniciada</string>
    <string name="password">Contrasenya</string>
    <string name="mail">Correu</string>
    <string name="logo_bergants">logo bergants</string>
    <string name="fotoPerfil">fotoPerfil</string>
    <string name="nomUsuari">Joan Galindo Palacio</string>
    <string name="fotoUsuari">fotoUsuari</string>
    <string name="placesAnada">PLACES ANADA</string>
    <string name="desplegablePlacesAnada">desplegablePlacesAnada</string>
    <string name="horaAnada">HORA ANADA</string>
    <string name="ubicacio">UBICACIÓ</string>
    <string name="tornada">TORNADA</string>
    <string name="afegirNom">Afegir</string>
    <string name="ubicacioCotxeEditText">Pl. Campus</string>
    <string name="placesTornada">PLACES TORNADA</string>
    <string name="editar">Editar</string>
    <string name="boto_borrar">boto borrar</string>
    <string name="tema_actuacio">TEMA DE L\'ACTUACIÓ</string>
    <string name="recuperar_contrasenya">RECUPERAR CONTRASENYA</string>
    <string name="correuContrasenya">correu@domini.com</string>
    <string name="nombrePlaces">NOMBRE DE PLACES</string>
    <string name="numPlaces">4 places</string>
    <string name="pl_campus">Pl. Campus</string>
    <string name="hora">Hora</string>
    <string name="numHora">15</string>
    <string name="minut">Minut</string>
    <string name="numMinut">40</string>
    <string name="recuperarContrasenya">Recuperar Contrasenya</string>
    <string name="config">Configuracio</string>
    <string name="avissosAssajos"> Avissos d\'assajos</string>
    <string name="avissosActuacions"> Avissos d\'actuacions</string>
    <string name="notificacions">NOTIFICACIONS</string>
    <string name="novetats"> Novetats del bloc de notícies</string>
    <string name="informacio">INFORMACIÓ ADDICIONAL</string>
    <string name="versio"> Versió de l\'aplicació</string>
    <string name="adrecacontacte"> Adreça de contacte</string>
    <string name="suport"> Suport</string>
    <string name="num">4.1</string>
    <string name="contacte"> info@bergants.cat</string>
    <string name="sup"> app@bergants.cat</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fotoMembre">fotoMembre</string>
    <string name="nomMembre">Nom Cognom Cognom</string>
    <string name="malnom">MALNOM</string>
    <string name="inputmalnom">malnom</string>
    <string name="enric">Enric Ledo Muntal</string>
    <string name="botoguardar">Guardar</string>
    <string name="botoborrar">eliminar</string>
    <string name="nomPerfil">Enric Ledo Muntal</string>
    <string name="fotoEnric">fotoenric</string>
    <string name="malnomenric"> Muntal</string>
    <string name="rolnomenric"> Membre</string>
    <string name="dataalta">BERGANT DES DE</string>
    <string name="dataenric"> 23–10–2019</string>
    <string name="eliminarcompte">Eliminar compte</string>
    <string name="eliminarperfil">Eliminar perfil</string>
    <string name="inputtitol">Afegir títol</string>
    <string name="inputnoticia">Contingut de la notícia</string>
    <string name="afegir">+</string>
    <string name="inputtitoledit">Dinar de la Mercè</string>
    <string name="inputnoticiaedit">Bergants! Els castellers de Barcelona ens conviden al dinar que organitzen després de l\'actuació de la Mercè. Es fa al parc del Clot (al costat del seu local). El dinar és una fideuà i té un preu de 6 euros, si no portes coberts ni gots els has de comprar per 1 euro. Hi ha opció vegana.
    Després del dinar hi haura festa!

    Moltes gràcies.</string>
    <string name="botocheck">guardar</string>
    <string name="check">Correcte</string>
    <string name="imatgeactuacio">imatgeActuacio</string>
    <string name="botodesivinc">BotoDeSiVinc</string>
    <string name="botodenovinc">BotoDeNoVinc</string>
    <string name="iconarellotge">IconaRellotge</string>
    <string name="iconaubicacio">IconaUbicacio</string>
    <string name="title_activity_menu_desplegable_noticies">MenuDesplegableNoticies</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="temporada_2022">TEMPORADA 2023</string>
    <string name="actuacions_menu">ACTUACIONS</string>
    <string name="assajos_menu">ASSAJOS</string>
    <string name="noticies_menu">NOTÍCIES</string>
    <string name="membres_menu">MEMBRES</string>
    <string name="perfil_menu">PERFIL</string>
    <string name="configuracio_menu">CONFIGURACIÓ</string>
    <string name="tancar_sessio">TANCAR SESSIÓ</string>
    <string name="tancar_sessioo">TANCAR SESSIÓ</string>
    <string name="tancar_sessi">Tancar sessió</string>
    <string name="membres">MEMBRES</string>
    <string name="BotoCanviarVisioPinyes">Pinyes</string>
    <string name="Boto_afegir_pinya">Afegir Pinya</string>
    <string name="disseny_titol_assaig">ASSAIG ESPECIAL DE LA MERCÈ</string>
    <string name="disseny_data_assaig">DISSABTE 23 de Setembre del 2022</string>
    <string name="disseny_lloc_assaig">20:00h Local de la colla</string>
    <string name="disseny_assistencia_assaig">SENSE RESPOSTA</string>
    <string name="nom_cognoms_membre">Nom i cognoms del membre</string>
    <string name="titol_noticia">Títol de la noticia</string>
    <string name="contingut_noticia">Contingut de la notícia</string>
    <string name="data_noticia">Data noticia</string>
    <string name="titol_actuacio">Titol de l\'actuació</string>
    <string name="data_actuacio">DATA I HORA DE L\'ACTUACIÓ</string>
    <string name="data_hora_actuacio">Data i hora de l\'actuació</string>
    <string name="lloc_actuacio">Adreça de la zona on actuar</string>
    <string name="afegir_autocar">AFEGIR AUTOCAR</string>
    <string name="titol_actuacio_bus">Titol de l\'actuació</string>
    <string name="data_actuacio_bus">DATA I HORA DE L\'ACTUACIÓ</string>
    <string name="data_hora_actuacio_bus">Data i hora de l\'actuació</string>
    <string name="lloc_actuacio_bus">Adreça de la zona on actuar</string>
    <string name="eliminar_autocar">ELIMINAR AUTOCAR</string>
    <string name="ubicacio_parada">UBICACIÓ DE LA PARADA DE L\'AUTOCAR</string>
    <string name="ubicacio_bus">Ubicació d\'estacionament de l\'autocar</string>
    <string name="horari_sortida">HORARI SORTIDA</string>
    <string name="sortida_bus">Hora de la sortida de l\'autocar</string>
    <string name="places_autocar">PLACES AUTOCAR</string>
    <string name="places_lliures">Nombre de places lliures a l\'autocar</string>
    <string name="titol_assaig">Títol de l\'assaig</string>
    <string name="data_assaig">DATA I HORA DE L\'ASSAIG</string>
    <string name="data_hora_assaig">Data i hora de l\'assaig</string>
    <string name="ubicacio_assaig">Adreça de la zona d\'assaig</string>
    <string name="malnom_membre">malnom</string>
    <string name="contrasenya">Contrasenya</string>
    <string name="afegir_contrasenya">Afegir contrasenya</string>
    <string name="data_alta">DATA D\'ALTA</string>
    <string name="dd_mm_aaaa">dd/mm/aaaa</string>
    <string name="add_titol_noticia">Títol de la noticia</string>
    <string name="add_contingut_noticia">Contingut de la notícia</string>
    <string name="add_data_noticia">Data de la notícia</string>
    <string name="add">afegir</string>
    <string name="edit_titol_actuacio">Actuació molt guay</string>
    <string name="edit_data_actuacio">DATA I HORA DE L\'ACTUACIÓ</string>
    <string name="edit_data_hora_actuacio">28/07/2023 14:30</string>
    <string name="edit_lloc_actuacio">Plaça divertida</string>
    <string name="delete">ELIMINAR</string>
    <string name="boto_afegir">+</string>
    <string name="edit_titol_assaig">Assaig molt guay</string>
    <string name="edit_data_assaig">DATA I HORA DE L\'ASSAIG</string>
    <string name="edit_data_hora_assaig">25/07/2023 18:30</string>
    <string name="edit_ubicacio_assaig">Carrer Mola Mogollón</string>
    <string name="eliminar_assaig">ELIMINAR</string>
    <string name="boto_afegir_assaig">+</string>
    <string name="edit_malnom_membre">malnom</string>
    <string name="eliminar_membre">Eliminar</string>
    <string name="contrasenya_membre">Contrasenya</string>
    <string name="afegir_contrasenya_membre">Afegir contrasenya</string>
    <string name="info_autocar">Autocar</string>
    <string name="acces_autocar">Accés Autocar</string>
    <string name="acces_cotxes">Accés Cotxes</string>
    <string name="confirmar_assistencia">Confirmar assistència</string>
    <string name="rebutjar_assistencia">Rebutjar assistència</string>
    <string name="hora_inici">Hora d\'inici</string>
    <string name="lloc_esdeveniment">Lloc de l\'esdeveniment</string>
</resources>