<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".afegirActuacioNoAutocar"
tools:layout_editor_absoluteX="0dp"
tools:layout_editor_absoluteY="8dp">

<androidx.constraintlayout.widget.Guideline
    android:id="@+id/liniaCentral"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_constraintGuide_percent="0.5" />

<androidx.constraintlayout.widget.Guideline
    android:id="@+id/liniaEsquerra"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_constraintGuide_begin="30dp" />

<TextView
    android:id="@+id/TemaActuacio"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="50dp"
    android:text="@string/temaActuacio"
    android:textColor="@color/negre"
    android:textSize="18sp"
    android:textStyle="bold"
    app:layout_constraintStart_toStartOf="@id/liniaEsquerra"
    app:layout_constraintTop_toTopOf="parent" />

<com.google.android.material.textfield.TextInputLayout
    android:id="@+id/temaActuacioTextInputLayout"
    android:layout_width="352dp"
    android:layout_height="48dp"
    android:layout_marginTop="82dp"
    app:boxBackgroundColor="@color/blanc"
    app:layout_constraintStart_toStartOf="@id/liniaEsquerra"
    app:layout_constraintTop_toTopOf="parent">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/TemaActuacioInputText"
        android:layout_width="352dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/blanc"
        android:hint="@string/inputTemaActuacio"
        android:inputType="text"
        android:maxLength="9"
        android:textColor="@color/grisClaretGentApuntada" />
</com.google.android.material.textfield.TextInputLayout>

<TextView
    android:id="@+id/HoraTitol"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="150dp"
    android:text="@string/HoraTitol"
    android:textColor="@color/negre"
    android:textSize="18sp"
    android:textStyle="bold"
    app:layout_constraintStart_toStartOf="@id/liniaEsquerra"
    app:layout_constraintTop_toTopOf="parent" />

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/horaEnMinuscules"
    app:layout_constraintStart_toStartOf="@id/liniaEsquerra"
    app:layout_constraintTop_toTopOf="@id/spinnerHoraAnada"
    app:layout_constraintBottom_toBottomOf="@id/spinnerHoraAnada"
    android:textSize="16sp"
    android:text="@string/HoraSpinner"/>

<Spinner
    android:id="@+id/spinnerHoraAnada"
    android:layout_width="wrap_content"
    android:layout_height="48dp"
    android:layout_gravity="start"
    android:layout_marginTop="182dp"
    android:layout_marginStart="8dp"
    android:contentDescription="@string/desplegableHora"
    app:layout_constraintStart_toEndOf="@id/horaEnMinuscules"
    app:layout_constraintTop_toTopOf="parent"
    tools:ignore="DuplicateSpeakableTextCheck" />

<TextView

    android:id="@+id/minutEnMinuscules"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintStart_toEndOf="@id/liniaCentral"
    app:layout_constraintTop_toTopOf="@id/spinnerMinutAnada"
    app:layout_constraintBottom_toBottomOf="@id/spinnerMinutAnada"
    android:textSize="16sp"
    android:text="@string/MinutSpinner"/>

<Spinner
    android:id="@+id/spinnerMinutAnada"
    android:layout_width="wrap_content"
    android:layout_height="48dp"
    android:layout_gravity="start"
    android:layout_marginTop="182dp"
    android:layout_marginStart="8dp"
    android:contentDescription="@string/desplegableMinut"
    app:layout_constraintStart_toEndOf="@id/minutEnMinuscules"
    app:layout_constraintTop_toTopOf="parent"
    tools:ignore="DuplicateSpeakableTextCheck" />

<TextView
    android:id="@+id/DataTitol"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="238dp"
    android:text="@string/DataTitol"
    android:textColor="@color/negre"
    android:textSize="18sp"
    android:textStyle="bold"
    app:layout_constraintStart_toStartOf="@id/liniaEsquerra"
    app:layout_constraintTop_toTopOf="parent" />

<TextView
    android:id="@+id/DiaEnMinuscules"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintStart_toStartOf="@id/liniaEsquerra"
    app:layout_constraintTop_toTopOf="@id/spinnerDiaAnada"
    app:layout_constraintBottom_toBottomOf="@id/spinnerDiaAnada"
    android:textSize="16sp"
    android:text="@string/DiaSpinner" />

<Spinner
    android:id="@+id/spinnerDiaAnada"
    android:layout_width="wrap_content"
    android:layout_height="48dp"
    android:layout_gravity="start"
    android:layout_marginTop="270dp"
    android:layout_marginStart="8dp"
    android:contentDescription="@string/desplegableDia"
    app:layout_constraintStart_toEndOf="@id/DiaEnMinuscules"
    app:layout_constraintTop_toTopOf="parent"
    tools:ignore="DuplicateSpeakableTextCheck" />

<TextView
    android:id="@+id/MesEnMinuscules"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintStart_toStartOf="@id/liniaEsquerra"
    app:layout_constraintTop_toTopOf="@id/spinnerMesAnada"
    app:layout_constraintBottom_toBottomOf="@id/spinnerMesAnada"
    android:textSize="16sp"
    android:text="@string/MesSpinner" />

<Spinner
    android:id="@+id/spinnerMesAnada"
    android:layout_width="wrap_content"
    android:layout_height="48dp"
    android:layout_gravity="start"
    android:layout_marginTop="326dp"
    android:layout_marginStart="8dp"
    android:contentDescription="@string/desplegableMes"
    app:layout_constraintStart_toEndOf="@id/MesEnMinuscules"
    app:layout_constraintTop_toTopOf="parent"
    tools:ignore="DuplicateSpeakableTextCheck" />

<TextView
    android:id="@+id/AnyEnMinuscules"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintStart_toStartOf="@id/liniaCentral"
    app:layout_constraintTop_toTopOf="@id/spinnerAnyAnada"
    app:layout_constraintBottom_toBottomOf="@id/spinnerAnyAnada"
    android:textSize="16sp"
    android:text="@string/AnySpinner" />

<Spinner
    android:id="@+id/spinnerAnyAnada"
    android:layout_width="wrap_content"
    android:layout_height="48dp"
    android:layout_gravity="start"
    android:layout_marginTop="270dp"
    android:layout_marginStart="8dp"
    android:contentDescription="@string/desplegableAny"
    app:layout_constraintStart_toEndOf="@id/AnyEnMinuscules"
    app:layout_constraintTop_toTopOf="parent"
    tools:ignore="DuplicateSpeakableTextCheck" />

<TextView
    android:id="@+id/UbicacioTitol"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="382dp"
    android:text="@string/UbicacioTitol"
    android:textColor="@color/negre"
    android:textSize="18sp"
    android:textStyle="bold"
    app:layout_constraintStart_toStartOf="@id/liniaEsquerra"
    app:layout_constraintTop_toTopOf="parent" />

<com.google.android.material.textfield.TextInputLayout
    android:id="@+id/UbicacioTitolTextInputLayout"
    android:layout_width="352dp"
    android:layout_height="48dp"
    android:layout_marginTop="414dp"
    app:boxBackgroundColor="@color/blanc"
    app:layout_constraintStart_toStartOf="@id/liniaEsquerra"
    app:layout_constraintTop_toTopOf="parent">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/UbicacioTitolInputText"
        android:layout_width="352dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/blanc"
        android:hint="@string/inputUbicacio"
        android:inputType="text"
        android:maxLength="9"
        android:textColor="@color/grisClaretGentApuntada" />
</com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/AutocarTitol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="482dp"
        android:text="@string/AutocarTitol"
        android:textColor="@color/negre"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/liniaEsquerra"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/booleanAdmin"
        style="@style/Switch"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/AutocarTitol"
        app:layout_constraintBottom_toBottomOf="@id/AutocarTitol"
        app:layout_constraintStart_toEndOf="@id/AutocarTitol"
        android:layout_marginStart="8dp"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <ImageView
    android:id="@+id/fotoPaperera"
    app:layout_constraintStart_toStartOf="parent"
    android:layout_marginStart="20dp"
    app:layout_constraintBottom_toBottomOf="parent"
    android:layout_marginBottom="15dp"
    android:layout_width="48dp"
    android:layout_height="48dp"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true"
    android:contentDescription="@string/botoborrar"
    android:src="@drawable/iconopapelera" />

<Button
    android:id="@+id/botoguardar"
    android:layout_width="150dp"
    android:layout_height="wrap_content"
    android:layout_marginEnd="20dp"
    android:layout_marginBottom="33dp"
    android:text="@string/botoguardar"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
